# fullstack-apps

simple-todo/: docker-compose.yml
simple-todo/backend/: .env.template  .gitignore  lifespan.py  main.py  pyproject.toml
simple-todo/backend/api/: __init__.py  tasks_v1.py
simple-todo/backend/core/: __init__.py  config.py
simple-todo/backend/core/logging/: config.py  setup.py
simple-todo/backend/db/: base.py  helper.py  orms.py  tasks.py  tasks_repository.py
simple-todo/backend/db/models/: __init__.py  statuses.py  tags.py  task_tag.py  tasks.py
simple-todo/backend/models/: __init__.py  task.py
